--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,7 +61,8 @@ body {
   width: 100%;
   background: #F3F3F3;
   margin-top: 4px;
-  & h1 {
+
+  h1 {
     width: 275px;
     height: 68px;
     font-size: 24px;
@@ -73,13 +74,15 @@ body {
     margin: auto;
     padding-top: 39px;
   }
-  & p {
+
+  p {
     line-height: 21.09px;
     text-align: center;
     width: 315px;
     height: 46px;
     margin: auto;
   }
+
   & button {
     font-size: 16px;
     font-weight: 500;
@@ -93,6 +96,13 @@ body {
     border: none;
     color: white;
     margin: 27px auto 57px auto;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      filter: brightness(1.2);
+      box-shadow: 0 6px 15px 0 #00000060;
+      cursor: pointer;
+    }
   }
 }
 
@@ -185,9 +195,53 @@ body {
   i {
     font-size: 21px;
     height: 22px;
-    font-weight: 100;
   }
 }
+/* Conteneur pour les icônes de cœur */
+.heart-container {
+  position: relative;
+  width: 24px; /* Largeur de l'icône */
+  height: 24px; /* Hauteur de l'icône */
+}
+
+/* Style de base pour les icônes de cœur */
+.heart-empty,
+.heart-full {
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+/* Cœur vide visible par défaut */
+.heart-empty {
+  color: black; /* Couleur grise pour le cœur vide */
+  opacity: 1; /* Visible */
+}
+
+/* Cœur plein caché par défaut */
+.heart-full {
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); /* Dégradé rose/violet */
+  -webkit-background-clip: text; /* Applique le dégradé au texte/icône */
+  background-clip: text;
+  color: transparent; /* Rend la couleur transparente pour voir le dégradé */
+  opacity: 0; /* Caché */
+}
+
+/* Au survol, le cœur vide disparaît et le cœur plein apparaît */
+.restaurants__card:hover .heart-empty {
+  opacity: 0; /* Caché */
+}
+
+.restaurants__card:hover .heart-full {
+  opacity: 1; /* Visible */
+  transform: scale(1.2); /* Agrandir légèrement le cœur plein */
+}
+.restaurants__card:hover .fa-heart-transition {
+  transform: scale(1.2); /* Agrandir légèrement le cœur au survol */
+}
+
 .card-content {
   h3 {
     font-size: 18px;
