--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /****** General ***********/
 * {
   font-family: "Roboto", sans-serif;
@@ -44,7 +43,8 @@ body {
   line-height: 18.75px;
   text-align: left;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }
 
 .header__logo {
@@ -72,7 +72,8 @@ body {
   line-height: 28.13px;
   text-align: center;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
   margin: auto;
   padding-top: 39px;
 }
@@ -179,7 +180,8 @@ body {
   height: 251px;
 }
 .card img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 174px;
   width: 100%;
   border-top-left-radius: 15px;
@@ -197,14 +199,12 @@ body {
   height: 22px;
 }
 
-/* Conteneur pour les icônes de cœur */
 .heart-container {
   position: relative;
-  width: 24px; /* Largeur de l'icône */
-  height: 24px; /* Hauteur de l'icône */
+  width: 24px;
+  height: 24px;
 }
 
-/* Style de base pour les icônes de cœur */
 .heart-empty,
 .heart-full {
   font-size: 24px;
@@ -214,33 +214,30 @@ body {
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-/* Cœur vide visible par défaut */
 .heart-empty {
-  color: black; /* Couleur grise pour le cœur vide */
-  opacity: 1; /* Visible */
+  color: black;
+  opacity: 1;
 }
 
-/* Cœur plein caché par défaut */
 .heart-full {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); /* Dégradé rose/violet */
-  -webkit-background-clip: text; /* Applique le dégradé au texte/icône */
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  -webkit-background-clip: text;
   background-clip: text;
-  color: transparent; /* Rend la couleur transparente pour voir le dégradé */
-  opacity: 0; /* Caché */
+  color: transparent;
+  opacity: 0;
 }
 
-/* Au survol, le cœur vide disparaît et le cœur plein apparaît */
 .restaurants__card:hover .heart-empty {
-  opacity: 0; /* Caché */
+  opacity: 0;
 }
 
 .restaurants__card:hover .heart-full {
-  opacity: 1; /* Visible */
-  transform: scale(1.2); /* Agrandir légèrement le cœur plein */
+  opacity: 1;
+  transform: scale(1.2);
 }
 
 .restaurants__card:hover .fa-heart-transition {
-  transform: scale(1.2); /* Agrandir légèrement le cœur au survol */
+  transform: scale(1.2);
 }
 
 .card-content h3 {
@@ -249,7 +246,8 @@ body {
   line-height: 21.09px;
   text-align: left;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }
 .card-content p {
   font-size: 17px;
@@ -257,7 +255,8 @@ body {
   line-height: 19.92px;
   text-align: left;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }
 
 /********* Footer **********/
@@ -277,7 +276,8 @@ footer .footer-logo {
   line-height: 26.24px;
   text-align: left;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
   width: 137px;
   height: 27px;
   margin-bottom: 16px;
@@ -353,6 +353,14 @@ footer a {
   .restaurants__card {
     width: 45.5%;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+  .footer-nav {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 57px 50px 30px auto;
+  }
+  .footer-nav__links {
+    display: flex;
+    margin-right: 70px;
+    gap: 30px;
+  }
+}/*# sourceMappingURL=style.css.map */
