--- a/assets/css/palette.css
+++ b/assets/css/palette.css
@@ -18,6 +18,25 @@ body {
   box-sizing: border-box;
 }
 
+h1 {
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  line-height: 40.82px;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 18.75px;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 21.09px;
+}
+
 /******* header **********/
 header {
   display: flex;
@@ -35,4 +54,55 @@ header {
 .header__arrow {
   position: absolute;
   left: 23px;
+}
+
+/******** hero **********/
+.hero__img {
+  height: 275px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/********* Restaurants **********/
+.restaurants {
+  box-sizing: border-box;
+  background: #f6f6f6;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  position: relative;
+  top: -32px;
+}
+.restaurants .restaurants__card__title {
+  display: flex;
+  align-items: center;
+  height: 29px;
+  padding: 32px 0 0 0;
+}
+.restaurants h1 {
+  margin-right: 24px;
+  margin-left: 17px;
+}
+.restaurants h2 {
+  position: relative;
+  margin-top: 40px;
+}
+.restaurants h2::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 40px;
+  border-bottom: 3px solid #99E2D0;
+}
+.restaurants .meal {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin: 12px 13px;
+  padding: 13.5px 15px;
+  height: 42px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }/*# sourceMappingURL=palette.css.map */
