--- a/assets/css/palette.scss
+++ b/assets/css/palette.scss
@@ -1,42 +1,108 @@
 /****** General ***********/
 * {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+body {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+.main-container {
+  width: 100%;
+  max-width: 767.98px;
+  box-sizing: border-box;
+}
+h1 {
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  line-height: 40.82px;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+h2 {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 18.75px;
+}
+h3 {
+  font-size: 18px;
+  line-height: 21.09px;
+}
+
+
+
+
+/******* header **********/
+header {
+  display: flex;
+  height: 63px;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  width: 162px;
+  margin: auto;
+}
+
+.header__arrow {
+  position: absolute;
+  left: 23px;
+}
+
+/******** hero **********/
+
+.hero__img {
+  height: 275px;
+  width: 100%;
+  object-fit: cover;
+}
+
+/********* Restaurants **********/
+.restaurants {
+  box-sizing: border-box;
+  background: #f6f6f6;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  position: relative;
+  top: -32px;
+
+  .restaurants__card__title {
     display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+    align-items: center;
+    height: 29px;
+    padding: 32px 0 0 0;
   }
-  .main-container {
-    width: 100%;
-    max-width: 767.98px;
-    box-sizing: border-box;
+  h1 {
+    margin-right: 24px;
+    margin-left: 17px;
+  }
+  h2 {
+    position: relative;
+    margin-top: 40px;
   }
 
- /******* header **********/
- header {
-    display: flex;
-    height: 63px;
-    justify-content: center;
-    align-items: center;
-    
-    
- }
-.logo {
-    display: flex;
-    width: 162px;
-    margin: auto;
-  
-  }
-  
-.header__logo {
-    
-  } 
-.header__arrow {
+  h2::after {
+    content: "";
     position: absolute;
-    left: 23px;
-    
+    bottom: -3px;
+    left: 0;
+    width: 40px;
+    border-bottom: 3px solid #99E2D0;
   }
+  .meal{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    margin: 12px 13px;
+    padding: 13.5px 15px;
+    height:42px;
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+  }
+
+}
