--- a/assets/css/palette.scss
+++ b/assets/css/palette.scss
@@ -69,7 +69,42 @@ header {
   border-top-right-radius: 40px;
   position: relative;
   top: -32px;
+  .heart-container {
+    position: relative;
+    width: 24px; 
+    height: 24px;
+    margin-bottom: 6px; 
 
+  }
+  .heart-empty,
+  .heart-full {
+    font-size: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+  .heart-empty {
+    color: black; 
+    opacity: 1;
+  }
+  .heart-full {
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); 
+    -webkit-background-clip: text; 
+    background-clip: text;
+    color: transparent;
+    opacity: 0;
+  }
+  
+  
+  .heart-empty:hover {
+    opacity: 0; 
+  }
+  
+  .heart-full:hover {
+    opacity: 1; 
+    
+  }
   .restaurants__card__title {
     display: flex;
     align-items: center;
@@ -83,6 +118,8 @@ header {
   h2 {
     position: relative;
     margin-top: 40px;
+    margin-bottom: 12px;
+    margin-left: 13px;
   }
 
   h2::after {
@@ -93,17 +130,75 @@ header {
     width: 40px;
     border-bottom: 3px solid #99E2D0;
   }
-  .meal{
+  .meal {
     display: flex;
-    justify-content: space-between;
-    align-content: center;
-    margin: 12px 13px;
-    padding: 13.5px 15px;
-    height:42px;
-    background: white;
-    border-radius: 15px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
-  }
+  justify-content: space-between;
+  align-content: center;
+  margin: 12px 13px;
+  height: 69px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+.meal__check {
+    background: #99E2D0;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 69px;
+    width: 59px; 
+    border-radius: 0 15px 15px 0;
+    position: absolute;
+    top: 50%;
+    right: -60px;
+    transform: translateY(-50%);
+    transition: right 0.3s ease;
+}
+.meal p {
+  font-size: 15.04px;
+  line-height: 17.63px;
+  letter-spacing: 0%;
+}
+
+.meal__content {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 15px;
+  transition: width 0.3s ease;
+}
+.meal:hover .meal__content {
+  width: calc(100% - 149px); /* Account for visible check icon on hover */
+}
+
+.meal:hover .meal__check {
+    right: 0;
+}
+
+.meal__content h3 {
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.meal__content p {
+  font-size: 15.04px;
+  line-height: 17.63px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
+.meal:hover .img__price {
+    transform: translateX(-59px); /* Déplace le prix vers la gauche de la largeur du check */
+}
+  
   .restaurants__button {
     font-size: 16px;
     font-weight: 500;
@@ -116,7 +211,7 @@ header {
     border-radius: 25px;
     border: none;
     color: white;
-    margin: 27px auto 57px auto;
+    margin: 27px auto 40px auto;
     transition: all 0.2s ease-in-out;
 
     &:hover {
@@ -130,12 +225,16 @@ header {
   }
 }
 .img__price {
-  margin-top: 18px;
+  display: flex;
+  margin-top: 22px;
   font-weight: 700;
   font-size: 15.04px;
   line-height: 17.63px;
   letter-spacing: 0%;
   text-align: center;
+  align-items: center;
+  margin-right: 13.5px;
+  transition: transform 0.3s ease;
 
 }
 .section {
@@ -193,4 +292,39 @@ footer {
 footer a {
   text-decoration: none;
   color: white;
+}
+
+@media (min-width: 767.98px) {
+  .main-container {
+    max-width: 100%;
+  }
+  .logo {
+    width: 200px;
+  }
+  .hero__img {
+    height: 383px;
+  }
+  .restaurants {
+    width: 73%;
+    margin: auto;
+  }
+  .restaurants__card {
+    width: 44%;
+    margin:auto;
+  }
+  .restaurants__card__title {
+    justify-content: center;
+  }
+  .footer-nav {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    margin: 35px 50px 0 auto;
+  }
+  .footer-nav__links {
+    display: flex;
+    margin-right: 70px;
+    gap: 30px;
+  }
+
 }
