--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /****** General ***********/
 * {
   font-family: "Roboto", sans-serif;
@@ -105,11 +106,125 @@ body {
   cursor: pointer;
 }
 
+/******** Loader **********/
+:root {
+  --green: #008744;
+  --blue: #0057e7;
+  --red: #d62d20;
+  --yellow: #ffa700;
+  --white: #eee;
+}
+
+/* Le loader */
+.loader {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+
+.circular {
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  transform-origin: center center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.path {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
+}
+@keyframes color {
+  0%, 100% {
+    stroke: var(--red);
+  }
+  40% {
+    stroke: var(--blue);
+  }
+  66% {
+    stroke: var(--green);
+  }
+  80%, 90% {
+    stroke: var(--yellow);
+  }
+}
+/* Conteneur du loader */
+.showbox {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5%;
+  background: var(--white);
+  z-index: 1000;
+  animation: hideLoader 0s ease-in 3s forwards;
+}
+
+/* Animation pour cacher le loader après 3 secondes */
+@keyframes hideLoader {
+  to {
+    visibility: hidden;
+  }
+}
+/* Contenu principal */
+.main-content {
+  visibility: hidden;
+  animation: showContent 0s ease-in 3s forwards;
+}
+
+@keyframes showContent {
+  to {
+    visibility: visible;
+  }
+}
+body {
+  margin: 0;
+  background-color: white;
+}
+
 /********* Fonctionnement *******/
 .choice {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  margin-bottom: 43px;
 }
 .choice h2 {
   margin: 48px auto 26px 20px;
@@ -379,8 +494,9 @@ footer a {
   }
   .footer-nav {
     display: flex;
+    align-items: center;
     flex-direction: row-reverse;
-    margin: 57px 50px 30px auto;
+    margin: 35px 50px 0 auto;
   }
   .footer-nav__links {
     display: flex;
