--- a/assets/css/accueil/style.scss
+++ b/assets/css/accueil/style.scss
@@ -1,4 +1,8 @@
 /****** General ***********/
+@import 'color';
+@import 'button';
+@import 'heart';
+
 * {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -26,7 +30,7 @@ body {
 .header__location {
   box-sizing: border-box;
   display: flex;
-  background-color: #EAEAEA;
+  background-color: $octonary-color;
   box-shadow: 0 4px 4px 0 #00000040;
   justify-content: center;
   padding-top: 15.5px;
@@ -41,7 +45,9 @@ body {
       text-align: left;
       text-underline-position: from-font;
       text-decoration-skip-ink: none;
-
+    }
+    & button {
+      @include button-style;
     }
 }
 .header__logo {
@@ -59,13 +65,13 @@ body {
   flex-direction: column;
   box-sizing: border-box;
   width: 100%;
-  background: #F3F3F3;
+  background:$secondary-color;
   margin-top: 4px;
 
   h1 {
     width: 275px;
     height: 68px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     line-height: 28.13px;
     text-align: center;
@@ -83,27 +89,6 @@ body {
     margin: auto;
   }
 
-  & button {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 18.75px;
-    text-align: center;
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-    box-shadow: 0 4px 10px 0 #00000040;
-    width: 218px;
-    height: 50px;
-    border-radius: 25px;
-    border: none;
-    color: white;
-    margin: 27px auto 57px auto;
-    transition: all 0.2s ease-in-out;
-
-    &:hover {
-      filter: brightness(1.2);
-      box-shadow: 0 6px 15px 0 #00000060;
-      cursor: pointer;
-    }
-  }
 }
 /******** Loader **********/
 :root {
@@ -220,7 +205,7 @@ body {
 
 body {
   margin: 0;
-  background-color: white;
+  background-color: $primary-color;
 }
 
 
@@ -233,7 +218,7 @@ body {
   margin-bottom: 43px;
   & h2 {
     margin: 48px auto 26px 20px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     line-height: 28.13px;
     text-align: left;
@@ -247,25 +232,25 @@ body {
     height: 72.38px;
     border-radius: 20px;
     border: none;
-    background: #F6F6F6;
+    background: $secondary-color;
     box-shadow: 0 4px 15px 0 #00000026;
     color: black;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 18.75px;
     margin: 0 auto 25px auto;
     position: relative;
       & i {
-        color: #7E7E7E;
+        color: $septenary-color;
         padding-right: 30px;
         text-align: left;
       }
       & i:hover {
-        color: #9356DC;
+        color: $quartenary-color;
       }
       .button__number {
-        color: white;
-        background: #9356DC;
+        color: $primary-color;
+        background: $quartenary-color;
         border-radius: 50%;
         width: 24px;
         height: 24px;
@@ -279,7 +264,7 @@ body {
 }
 /******** Restaurants **********/
 .restaurants {
-  background: #F6F6F6;
+  background: $secondary-color;
   padding :54px 20px 66px 20px;
   h2 {
     margin-bottom: 20px;
@@ -316,7 +301,7 @@ body {
     margin: 16px 25px 12px 13px;
   }
   i {
-    font-size: 21px;
+    font-size: 1.31rem;
     height: 22px;
   }
   .img__p{
@@ -325,12 +310,11 @@ body {
     border-radius: 2px;
     background: #99E2D0;
     box-shadow: 0px 2px 4px 0px #00000026;
-    font-family: Roboto;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 16.41px;
     text-align: center;
-    color: #008766;
+    color: $senary-color;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -340,53 +324,11 @@ body {
   }
 }
 
-.heart-container {
-  position: relative;
-  width: 24px; 
-  height: 24px; 
-}
-
-
-.heart-empty,
-.heart-full {
-  font-size: 24px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-
-.heart-empty {
-  color: black; 
-  opacity: 1; 
-}
-
-
-.heart-full {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); 
-  -webkit-background-clip: text; 
-  background-clip: text;
-  color: transparent;
-  opacity: 0;
-}
-
-
-.heart-empty:hover {
-  opacity: 0; 
-}
-
-.heart-full:hover {
-  opacity: 1; 
-  transform: scale(1.2); 
-}
-.restaurants__card:hover .fa-heart-transition {
-  transform: scale(1.2); 
-}
+@include heart;
 
 .card-content {
   h3 {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
     line-height: 21.09px;
     text-align: left;
@@ -394,7 +336,7 @@ body {
     text-decoration-skip-ink: none;
   }
   p {
-    font-size: 17px;
+    font-size: 1.063rem;
     font-weight: 300;
     line-height: 19.92px;
     text-align: left;
@@ -406,13 +348,13 @@ body {
 footer {
   box-sizing: border-box;
   background: #353535;
-  color: white;
+  color: $primary-color;
   padding-left: 25px;
   padding-top: 22px;
   padding-bottom: 22px;
   .footer-logo {
     font-family: Shrikhand;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: italic;
     font-weight: 900;
     line-height: 26.24px;
@@ -434,7 +376,7 @@ footer {
 }
 footer a {
   text-decoration: none;
-  color: white;
+  color: $primary-color;
 }
 
 @media (min-width: 767.98px) {
@@ -451,7 +393,7 @@ footer a {
         width: 100%;
         font-weight: 700;
         height: 47px;
-        font-size: 40px;
+        font-size: 2.5rem;
         line-height: 46.88px;
         letter-spacing: 0;
         text-align: center;
@@ -465,7 +407,7 @@ footer a {
         margin-top: 18px;
         align-content: center;
         font-weight: 300;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 21.09px;
         letter-spacing: 0;
         text-align: center;
