--- a/assets/css/restaurants/palette.scss
+++ b/assets/css/restaurants/palette.scss
@@ -1,4 +1,8 @@
 /****** General ***********/
+@import 'color';
+@import 'button';
+@import 'heart';
+
 * {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -17,18 +21,18 @@ body {
 }
 h1 {
   font-family: "Shrikhand", serif;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 40.82px;
   font-family: Shrikhand;
   font-weight: 400;
 }
 h2 {
   font-weight: 300;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 18.75px;
 }
 h3 {
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 21.09px;
 }
 
@@ -64,7 +68,7 @@ header {
 /********* Restaurants **********/
 .restaurants {
   box-sizing: border-box;
-  background: #f6f6f6;
+  background: $secondary-color;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
   position: relative;
@@ -78,7 +82,7 @@ header {
   }
   .heart-empty,
   .heart-full {
-    font-size: 24px;
+    font-size: 1.5rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -89,7 +93,7 @@ header {
     opacity: 1;
   }
   .heart-full {
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); 
+    background: linear-gradient(193.33deg, $quartenary-color -11.44%, $tertionary-color 123.93%); 
     -webkit-background-clip: text; 
     background-clip: text;
     color: transparent;
@@ -128,7 +132,7 @@ header {
     bottom: -3px;
     left: 0;
     width: 40px;
-    border-bottom: 3px solid #99E2D0;
+    border-bottom: 3px solid $cinquenary-color;
   }
   .meal {
     display: flex;
@@ -136,16 +140,16 @@ header {
   align-content: center;
   margin: 12px 13px;
   height: 69px;
-  background: white;
+  background: $primary-color;
   border-radius: 15px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
   position: relative;
   overflow: hidden;
-}
+  }
 
-.meal__check {
-    background: #99E2D0;
-    color: white;
+  .meal__check {
+    background: $cinquenary-color;
+    color: $primary-color;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -157,68 +161,48 @@ header {
     right: -60px;
     transform: translateY(-50%);
     transition: right 0.3s ease;
-}
-.meal p {
-  font-size: 15.04px;
+  } 
+  .meal p {
+  font-size: 0.938rem;
   line-height: 17.63px;
   letter-spacing: 0%;
-}
-
-.meal__content {
+  }
+  .meal__content {
   display: flex;
   flex-direction: column;
   margin-top: auto;
   margin-bottom: auto;
   margin-left: 15px;
   transition: width 0.3s ease;
-}
-.meal:hover .meal__content {
+  }
+  .meal:hover .meal__content {
   width: calc(100% - 149px); /* Account for visible check icon on hover */
-}
-
-.meal:hover .meal__check {
+  }
+  .meal:hover .meal__check {
     right: 0;
-}
+  }
 
-.meal__content h3 {
+  .meal__content h3 {
   margin: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-.meal__content p {
-  font-size: 15.04px;
+  }
+  .meal__content p {
+  font-size: 0.938rem;
   line-height: 17.63px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 0;
-}
+  }
 
-.meal:hover .img__price {
-    transform: translateX(-59px); /* Déplace le prix vers la gauche de la largeur du check */
-}
+  .meal:hover .img__price {
+    transform: translateX(-59px); 
+  }
   
   .restaurants__button {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 18.75px;
-    text-align: center;
-    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-    box-shadow: 0 4px 10px 0 #00000040;
-    width: 218px;
-    height: 50px;
-    border-radius: 25px;
-    border: none;
-    color: white;
-    margin: 27px auto 40px auto;
-    transition: all 0.2s ease-in-out;
-
-    &:hover {
-      filter: brightness(1.2);
-      box-shadow: 0 6px 15px 0 #00000060;
-      cursor: pointer;
-    }
+    @include button-style;
   }
   .restaurants__button__container {
     display: flex;
@@ -228,7 +212,7 @@ header {
   display: flex;
   margin-top: 22px;
   font-weight: 700;
-  font-size: 15.04px;
+  font-size: 0.938rem;
   line-height: 17.63px;
   letter-spacing: 0%;
   text-align: center;
@@ -262,14 +246,14 @@ header {
 footer {
   box-sizing: border-box;
   background: #353535;
-  color: white;
+  color: $primary-color;
   padding-left: 25px;
   padding-top: 22px;
   padding-bottom: 22px;
   margin-top: -32px;
   .footer-logo {
     font-family: Shrikhand;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: italic;
     font-weight: 900;
     line-height: 26.24px;
@@ -291,7 +275,7 @@ footer {
 }
 footer a {
   text-decoration: none;
-  color: white;
+  color: $primary-color;
 }
 
 @media (min-width: 767.98px) {
@@ -326,5 +310,4 @@ footer a {
     margin-right: 70px;
     gap: 30px;
   }
-
 }
