--- a/assets/css/accueil/style.css
+++ b/assets/css/accueil/style.css
@@ -1,5 +1,41 @@
 @charset "UTF-8";
 /****** General ***********/
+.heart-container {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.heart-empty,
+.heart-full {
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.heart-empty {
+  color: black;
+  opacity: 1;
+}
+
+.heart-full {
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  opacity: 0;
+}
+
+.heart-empty:hover {
+  opacity: 0;
+}
+
+.heart-full:hover {
+  opacity: 1;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -68,7 +104,7 @@ body {
 .hero h1 {
   width: 275px;
   height: 68px;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 28.13px;
   text-align: center;
@@ -86,7 +122,7 @@ body {
   margin: auto;
 }
 .hero button {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 18.75px;
   text-align: center;
@@ -334,47 +370,6 @@ body {
   position: absolute;
   right: 13px;
   top: 13px;
-}
-
-.heart-container {
-  position: relative;
-  width: 24px;
-  height: 24px;
-}
-
-.heart-empty,
-.heart-full {
-  font-size: 24px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.heart-empty {
-  color: black;
-  opacity: 1;
-}
-
-.heart-full {
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  opacity: 0;
-}
-
-.heart-empty:hover {
-  opacity: 0;
-}
-
-.heart-full:hover {
-  opacity: 1;
-  transform: scale(1.2);
-}
-
-.restaurants__card:hover .fa-heart-transition {
-  transform: scale(1.2);
 }
 
 .card-content h3 {
